--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <!-- Custom styles for this template -->
     <link href="product.css" rel="stylesheet">
+    <script src="typing.js"></script>
   </head>
 
   <body>
@@ -32,50 +33,64 @@
       </div>
     </nav>
 
-    <div class="position-relative overflow-hidden p-5 p-md-5 m-md-3 text-left bg-light text-white">
-      <div class="col-md-6 p-lg-5 my-5 mx-1">
+    <div class="position-relative overflow-hidden p-2 p-md-2 m-md-3 text-left bg-alt">
+      <div class="col-md-6 px-lg-5 py-lg-1 mx-md-5 my-2 mx-1">
         <h1 style="font-weight: 500;" class="mt-5 display-5">Be smarter, connected with your home.</h1>
         <a class="mt-2 mb-5 btn btn-primary" href="#">Explore Opportunities</a>
       </div>
     </div>
 
     <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
-      <div class="bg-primary mr-md-3 pt-3 px-3 px-md-5 text-center text-white overflow-hidden">
-        <div class="my-3 py-3">
-          <h2 class="display-5">An array of voice-activated devices to run your home.</h2>
+      <div class="bg-primary mr-md-3 px-3 pt-xs-3 px-md-5 text-left text-white overflow-hidden">
+        <div class="my-3 py-3 px-lg-5 py-lg-1 mx-md-1 mx-2">
+          <h3 class="mt-3 pt-2 pb-1 mb-3 display-5"><span style="opacity: 0.5;">Run your home with</span><br><span
+            class="txt-rotate"
+            data-period="2000"
+            data-rotate='[ "Google Home.", "Amazon Echo.", "Apple HomePod.", "Alexa.", "Cortana.", "Siri.", "Google Assistant." ]'></span>
+          </h3>
         </div>
+      </div>
+      <div class="bg-dark mr-md-3 px-3 pt-xs-3 px-md-5 text-left text-white overflow-hidden">
+        <div class="my-3 py-3 px-lg-5 py-lg-1 mx-md-1 mx-2">
+          <div class="mt-3 pt-2 pb-1 mb-3 display-5">
+            <h5><span style="opacity: 0.5;">Featured Tip</span></h5>
+            <h3 style="line-height: 1.75rem !important;">Use <a class="underlined">Ring Doorbell</a> with Alexa.</h3>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="position-relative overflow-hidden p-2 p-md-2 m-md-3 text-left bg-light">
+      <div class="col-md-6 px-lg-5 py-lg-1 mx-md-5 my-1 mx-1">
+          <h1 style="font-weight: 500;visibility: hidden;" class="mt-5 display-5">Be smarter, connected with your home.</h1>
+          <a class="mt-1 mb-1 btn btn-primary" style="visibility: hidden;" href="#">Explore Opportunities</a>
       </div>
     </div>
 
     <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
-      <div class="bg-white mr-md-3 px-3 pt-xs-3 px-md-5 text-center overflow-hidden">
-        <div class="my-3 py-3">
-          <h2 class="display-5">Google Home</h2>
-          <p class="lead text-muted">with Google Assistant</p>
-          <a class="mb-2 btn btn-outline-secondary" href="#">Explore Models</a>
+      <div class="bg-alt mr-md-3 px-3 pt-xs-3 px-md-5 text-center overflow-hidden">
+        <div class="my-3 py-3 px-lg-3 py-lg-1 mx-md-1 mx-2">
+          <h4 class="mt-3 pt-1 pb-1 mb-3 display-5">Search by Device</h4>
         </div>
-        <div class="bg-home mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
       </div>
       <div class="bg-white mr-md-3 px-3 pt-xs-3 px-md-5 text-center overflow-hidden">
-        <div class="my-3 p-3">
-          <h2 class="display-5">Amazon Echo</h2>
-          <p class="lead text-muted">with Alexa</p>
-          <a class="mb-3 btn btn-outline-secondary" href="#">Explore Models</a>
+        <div class="my-3 py-3 px-lg-5 py-lg-1 mx-md-1 mx-2">
+          <h4 class="mt-3 pt-1 pb-1 mb-3 display-5">Google Home</h4>
         </div>
-        <div class="bg-echo mx-auto" style="width: 80%; height: 295px; border-radius: 21px 21px 0 0;"></div>
       </div>
       <div class="bg-white mr-md-3 px-3 pt-xs-3 px-md-5 text-center overflow-hidden">
-          <div class="my-3 p-3">
-            <h2 class="display-5">Apple HomePod</h2>
-            <p class="lead text-muted">with Siri</p>
-            <a class="mb-1 btn btn-outline-secondary" href="#">Explore Models</a>
-          </div>
-          <div class="bg-homepod2 mx-auto" style="width: 80%; height: 320px; border-radius: 21px 21px 0 0;"></div>
+        <div class="my-3 py-3 px-lg-5 py-lg-1 mx-md-1 mx-2">
+          <h4 class="mt-3 pt-1 pb-1 mb-3 display-5">Amazon Echo</h4>
         </div>
+      </div>
+      <div class="bg-white mr-md-3 px-3 pt-xs-3 px-md-5 text-center overflow-hidden">
+        <div class="my-3 py-3 px-lg-5 py-lg-1 mx-md-1 mx-2">
+          <h4 class="mt-3 pt-1 pb-1 mb-3 display-5">Apple HomePod</h4>
+        </div>
+      </div>
     </div>
 
-
-    <footer class="d-flex justify-content-center w-100 bg-foot text-white mt-5 p-4">
+    <footer class="d-flex justify-content-center w-100 bg-foot text-white p-4">
       <div class="row">
         <div class="col-6 col-md px-md-5">
           <h5>Google</h5>
